--- a/build.yaml
+++ b/build.yaml
@@ -5,4 +5,6 @@ include:
     shield: totem_right
   - board: seeeduino_xiao_ble
     shield: settings_reset
+  - board: seeeduino_xiao_ble
+    shield: hummingbird rgbled_adapter
 # there is no settingsreset (needed) for the XIAO
